--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <version>1.18.34</version> <!-- Используйте актуальную версию -->
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.2.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>InfoHub</finalName>
