!!!news feed working!!!
fixed Paths

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.mvc.view.suffix=.jsp
 
 #Actuator
 
+#Actuator
+management.endpoints.web.exposure.include=env,info,shutdown,mappings,beans,health,metrics
 #db
 spring.datasource.url=${db_URL}
 spring.datasource.name=${db_name}
