--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 #Actuator
-
-#Actuator
 management.endpoints.web.exposure.include=env,info,shutdown,mappings,beans,health,metrics
 #db
 spring.datasource.url=${db_URL}
 spring.datasource.name=${db_name}
 spring.datasource.password=${db_password}
+spring.datasource.driver-class-name=org.postgresql.Driver
