modified: -PostController -PostService -pom(added starter JDBC)

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <!--21.02-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>InfoHub</finalName>
