--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.url=${db_URL}
 spring.datasource.name=${db_name}
 spring.datasource.password=${db_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+baseline-on-migrate=true
