modified: -added logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.datasource.name=${db_name}
 spring.datasource.password=${db_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-baseline-on-migrate=true
+#baseline-on-migrate=true
+logging.level.root=info
+logging.file.name=logs/logs.log
