--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,14 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.5</version>
         </dependency>
+        <!-- Source: https://mvnrepository.com/artifact/log4j/log4j -->
+        <!--26.02-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>InfoHub</finalName>
